// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Airport List Component multiselectgroups should pass sortByGroups as true upon passing search string  1`] = `
<div>
  <div>
    <div>
      <div />
      <div
        class="airport-list"
      >
        <div>
          <div
            class="page-header action-bar"
            id=""
          >
            <ul
              class="action-bar-buttons action-bar--left-buttons"
            />
            <div
              class="action-bar--container"
            >
              <div
                class="action-bar--title"
              >
                <span
                  class="action-bar--main-title"
                >
                  Airport List
                </span>
                <span
                  class="action-bar--sub-title"
                />
              </div>
            </div>
            <ul
              class="action-bar-buttons action-bar--right-buttons"
            >
              <li
                class="action-bar-buttons--item"
              >
                <button
                  class="cancel button"
                  type="button"
                >
                  Cancel
                </button>
              </li>
            </ul>
          </div>
          <div />
        </div>
        <div
          class="airport-search-bar options-search-bar bggray3 clearfix bdb bdgray3 px5 py3"
        >
          <div
            class="airport-search-bar--field relative"
          >
            <form
              action=""
              class="airport-search-bar--form m0 inline-block relative fullwidth"
            >
              <input
                class="airport-search-bar--input rd4 fullwidth border-none lineheight20 large"
                placeholder="SHARED__PLACEHOLDER__SEARCH"
                type="search"
                value=""
              />
              <i
                class="airport-search-bar--remove absolute r0 p4 gray4 hide icon icon_remove"
              />
            </form>
            <i
              class="airport-search-bar--icon absolute gray4 medium icon icon_search"
            />
          </div>
        </div>
        <div
          class="airport-list--results options-list--results"
        >
          <div>
            childElement
          </div>
          <div
            class="airport-group-container"
          >
            <ul
              class="airport-group"
            >
              <li
                data-qa="airport-list-current-location"
              >
                <div
                  class="flex flex-cross-center"
                >
                  <i
                    class="pblue pr3 xxlarge icon icon_current-location"
                  />
                  <span>
                    SHARED__AIRPORT_LIST__CURRENT_LOCATION
                  </span>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="airport-list-groups"
          >
            <div>
              <div
                class="airport-group-container"
              >
                <div
                  class="airport-group-header"
                >
                  Boston Area Airports
                </div>
                <ul
                  class="airport-group"
                >
                  <form
                    class="form"
                    name="MULTI_SELECT_GROUP_FORM_DESTINATION"
                    novalidate=""
                  >
                    <fieldset>
                      <div
                        class="field"
                      >
                        <div
                          class="relative flex checkbox-button flex-cross-center"
                          name="BOT"
                        >
                          <div>
                            <span
                              class="checkbox-button--mark"
                            >
                              <i
                                class="absolute xlarge bgtransp icon icon_check"
                              />
                            </span>
                          </div>
                          <div>
                            <div
                              class="checkbox-button--children flex-equal-width ml2"
                            >
                              <li>
                                All Boston Area Airports
                              </li>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="field"
                      >
                        <div
                          class="relative flex checkbox-button flex-cross-center"
                          name="BOS"
                        >
                          <div>
                            <span
                              class="checkbox-button--mark"
                            >
                              <i
                                class="absolute xlarge bgtransp icon icon_check"
                              />
                            </span>
                          </div>
                          <div>
                            <div
                              class="checkbox-button--children flex-equal-width ml2"
                            >
                              <li
                                class="flex"
                              >
                                <div
                                  class="flex-auto"
                                >
                                  <span
                                    class=""
                                  >
                                    Boston (Logan), MA - BOS
                                  </span>
                                </div>
                              </li>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="field"
                      >
                        <div
                          class="relative flex checkbox-button flex-cross-center"
                          name="BDL"
                        >
                          <div>
                            <span
                              class="checkbox-button--mark"
                            >
                              <i
                                class="absolute xlarge bgtransp icon icon_check"
                              />
                            </span>
                          </div>
                          <div>
                            <div
                              class="checkbox-button--children flex-equal-width ml2"
                            >
                              <li
                                class="flex"
                              >
                                <div
                                  class="flex-auto"
                                >
                                  <span
                                    class=""
                                  >
                                    Hartford, CT - BDL
                                  </span>
                                </div>
                              </li>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="field"
                      >
                        <div
                          class="relative flex checkbox-button flex-cross-center"
                          name="MHT"
                        >
                          <div>
                            <span
                              class="checkbox-button--mark"
                            >
                              <i
                                class="absolute xlarge bgtransp icon icon_check"
                              />
                            </span>
                          </div>
                          <div>
                            <div
                              class="checkbox-button--children flex-equal-width ml2"
                            >
                              <li
                                class="flex"
                              >
                                <div
                                  class="flex-auto"
                                >
                                  <span
                                    class=""
                                  >
                                    Manchester, NH - MHT
                                  </span>
                                </div>
                              </li>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="field"
                      >
                        <div
                          class="relative flex checkbox-button flex-cross-center"
                          name="PVD"
                        >
                          <div>
                            <span
                              class="checkbox-button--mark"
                            >
                              <i
                                class="absolute xlarge bgtransp icon icon_check"
                              />
                            </span>
                          </div>
                          <div>
                            <div
                              class="checkbox-button--children flex-equal-width ml2"
                            >
                              <li
                                class="flex"
                              >
                                <div
                                  class="flex-auto"
                                >
                                  <span
                                    class=""
                                  >
                                    Providence, RI - PVD
                                  </span>
                                </div>
                              </li>
                            </div>
                          </div>
                        </div>
                      </div>
                    </fieldset>
                  </form>
                </ul>
              </div>
            </div>
            <div
              class="alphabet-selector disable-scrolling"
            />
          </div>
          <div
            class="airport-list--results_shadow options-list--results_shadow"
          />
          <div
            class="airport-list--results_empty hide"
          >
            No Results
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Airport List Component recent searches should display 3 recent airport searches 1`] = `
<div
  class="airport-group-container"
>
  <div
    class="airport-group-header"
  >
    Recent Searches
  </div>
  <ul
    class="airport-group"
  >
    <li
      class="flex"
    >
      <div
        class="flex-auto"
      >
        <span
          class=""
        >
          Denver, CO - DEN
        </span>
      </div>
      <i
        class="gray4 right recent-search-remove-icon icon icon_remove"
        data-qa="recent-search-remove-button"
      />
    </li>
    <li
      class="flex"
    >
      <div
        class="flex-auto"
      >
        <span
          class=""
        >
          Akron-Canton, OH - CAK
        </span>
      </div>
      <i
        class="gray4 right recent-search-remove-icon icon icon_remove"
        data-qa="recent-search-remove-button"
      />
    </li>
    <li
      class="flex"
    >
      <div
        class="flex-auto"
      >
        <span
          class=""
        >
          Albany, NY - ALB
        </span>
      </div>
      <i
        class="gray4 right recent-search-remove-icon icon icon_remove"
        data-qa="recent-search-remove-button"
      />
    </li>
  </ul>
</div>
`;

exports[`Airport List Component searching state search bar get input focus should not render search bar, current location and alphabet selector when isReaccomCoTerminalEligible is true 1`] = `
<div>
  <div>
    <div>
      <div />
      <div
        class="airport-list"
      >
        <div>
          <div
            class="page-header action-bar"
            id=""
          >
            <ul
              class="action-bar-buttons action-bar--left-buttons"
            />
            <div
              class="action-bar--container"
            >
              <div
                class="action-bar--title"
              >
                <span
                  class="action-bar--main-title"
                >
                  Airport List
                </span>
                <span
                  class="action-bar--sub-title"
                />
              </div>
            </div>
            <ul
              class="action-bar-buttons action-bar--right-buttons"
            >
              <li
                class="action-bar-buttons--item"
              >
                <button
                  class="cancel button"
                  type="button"
                >
                  Cancel
                </button>
              </li>
            </ul>
          </div>
          <div />
        </div>
        <div
          class="airport-list--results options-list--results"
        >
          <div>
            childElement
          </div>
          <div
            class="airport-list-groups"
          >
            <div>
              <div
                class="airport-group-container"
              >
                <ul
                  class="airport-group"
                >
                  <li
                    class="flex"
                  >
                    <div
                      class="flex-auto"
                    >
                      <span
                        class=""
                      >
                        Akron-Canton, OH - CAK
                      </span>
                    </div>
                  </li>
                  <li
                    class="flex"
                  >
                    <div
                      class="flex-auto"
                    >
                      <span
                        class=""
                      >
                        Albany, NY - ALB
                      </span>
                    </div>
                  </li>
                  <li
                    class="flex"
                  >
                    <div
                      class="flex-auto"
                    >
                      <span
                        class=""
                      >
                        Albuquerque, NM - ABQ
                      </span>
                    </div>
                  </li>
                  <li
                    class="flex"
                  >
                    <div
                      class="flex-auto"
                    >
                      <span
                        class=""
                      >
                        Aruba, Aruba - AUA
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
            <div>
              <div
                class="airport-group-container"
              >
                <ul
                  class="airport-group"
                >
                  <li
                    class="flex"
                  >
                    <div
                      class="flex-auto"
                    >
                      <span
                        class=""
                      >
                        Cabo San Lucas/Los Cabos, MX - SJD
                      </span>
                    </div>
                  </li>
                  <li
                    class="flex"
                  >
                    <div
                      class="flex-auto"
                    >
                      <span
                        class=""
                      >
                        Cancun, Mexico - CUN
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
            <div>
              <div
                class="airport-group-container"
              >
                <ul
                  class="airport-group"
                >
                  <li
                    class="flex"
                  >
                    <div
                      class="flex-auto"
                    >
                      <span
                        class=""
                      >
                        Denver, CO - DEN
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
            <div>
              <div
                class="airport-group-container"
              >
                <ul
                  class="airport-group"
                >
                  <li
                    class="flex"
                  >
                    <div
                      class="flex-auto"
                    >
                      <span
                        class=""
                      >
                        Mexico City, Mexico - MEX
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            class="airport-list--results_shadow options-list--results_shadow"
          />
          <div
            class="airport-list--results_empty hide"
          >
            No Results
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Airport List Component searching state search bar get input focus should not show airport groups when toggle is false 1`] = `
<div>
  <div>
    <div>
      <div />
      <div
        class="airport-list airport-list--searching"
      >
        <div>
          <div
            class="page-header hidden action-bar"
            id=""
          >
            <ul
              class="action-bar-buttons action-bar--left-buttons"
            />
            <div
              class="action-bar--container"
            >
              <div
                class="action-bar--title"
              >
                <span
                  class="action-bar--main-title"
                >
                  Airport List
                </span>
                <span
                  class="action-bar--sub-title"
                />
              </div>
            </div>
            <ul
              class="action-bar-buttons action-bar--right-buttons"
            >
              <li
                class="action-bar-buttons--item"
              >
                <button
                  class="cancel button"
                  type="button"
                >
                  Cancel
                </button>
              </li>
            </ul>
          </div>
          <div />
        </div>
        <div
          class="airport-search-bar options-search-bar bggray3 clearfix bdb bdgray3 px5 py3"
        >
          <div
            class="airport-search-bar--field relative"
          >
            <form
              action=""
              class="airport-search-bar--form m0 inline-block relative fullwidth"
            >
              <input
                class="airport-search-bar--input rd4 fullwidth border-none lineheight20 large"
                placeholder="SHARED__PLACEHOLDER__SEARCH"
                type="search"
                value=""
              />
              <i
                class="airport-search-bar--remove absolute r0 p4 gray4 hide icon icon_remove"
              />
            </form>
            <i
              class="airport-search-bar--icon absolute gray4 medium icon icon_search"
            />
          </div>
        </div>
        <div
          class="airport-list--results options-list--results"
        >
          <div>
            childElement
          </div>
          <div
            class="airport-group-container"
          >
            <ul
              class="airport-group"
            >
              <li
                data-qa="airport-list-current-location"
              >
                <div
                  class="flex flex-cross-center"
                >
                  <i
                    class="pblue pr3 xxlarge icon icon_current-location"
                  />
                  <span>
                    SHARED__AIRPORT_LIST__CURRENT_LOCATION
                  </span>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="airport-list-groups"
          >
            <div
              class="alphabet-selector disable-scrolling"
            />
          </div>
          <div
            class="airport-list--results_shadow options-list--results_shadow"
          />
          <div
            class="airport-list--results_empty"
          >
            No Results
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
